--- a/src/app/seller-add-product/seller-add-product.component.scss
+++ b/src/app/seller-add-product/seller-add-product.component.scss
@@ -131,7 +131,7 @@ form {
   font-size: 16px;
   font-weight: 500;
   color: #fff;
-  padding: 4px 20px;
+  padding: 8px 20px 6px 20px;
   border-radius: 5px;
   transition: 300ms;
   border: 1px solid transparent;
@@ -171,4 +171,14 @@ form {
     font-size: 14px;
     padding: 4px 12px;
   }
+}
+
+.success-message-show {
+  background: #00a20047;
+  border-radius: 6px;
+  padding: 30px 50px;
+  font-size: 30px;
+  color: green;
+  max-width: 1000px;
+  margin: 0px auto 30px;
 }
