--- a/src/app/seller-add-product/seller-add-product.component.html
+++ b/src/app/seller-add-product/seller-add-product.component.html
@@ -1,4 +1,4 @@
-<!-- /----::CREATE SELLER ACCOUNT FORM::----/ -->
+<!-- /----::CREATE SELLER ADD PRODUCT::----/ -->
 <div class="seller-account">
   <div class="custom-container seller-account-child">
     <div class="account-form-title">
