--- a/src/app/seller-add-product/seller-add-product.component.html
+++ b/src/app/seller-add-product/seller-add-product.component.html
@@ -124,7 +124,7 @@
             <!-- /-----::TEXTAREA::-----/ -->
             <div class="form-item">
               <div class="form-item-child">
-                <label for="description">Product Image URL:</label>
+                <label for="description">Product Product Description:</label>
                 <textarea
                   id="description"
                   cols="30"
