error message and success message added.

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -8,8 +8,18 @@
     </div>
 
     <div class="seller-products">
+      <div class="success-message-show" *ngIf="showSuccessMessage">
+        <p>{{ showSuccessMessage }}</p>
+      </div>
+
+      <div
+        class="success-message-show success-message-show2"
+        *ngIf="showSuccessMessage2 && !showSuccessMessage"
+      >
+        <p>{{ showSuccessMessage2 }}</p>
+      </div>
       <ng-container *ngIf="!showSpinner">
-        <table>
+        <table *ngIf="!showSuccessMessage">
           <thead>
             <tr>
               <th>Image</th>
