--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -82,3 +82,13 @@ table td:first-child img {
   object-fit: cover;
   margin: 0px auto;
 }
+
+.success-message-show {
+  background: rgba(220, 20, 60, 0.268);
+  color: crimson;
+}
+
+.success-message-show2 {
+  background: #00a20047;
+  color: green;
+}
