--- a/src/theme/base.scss
+++ b/src/theme/base.scss
@@ -126,3 +126,11 @@ p {
   text-align: center;
   font-size: 20px;
 }
+
+.success-message-show {
+  border-radius: 6px;
+  padding: 30px 50px;
+  font-size: 30px;
+  width: 100%;
+  margin: 0px auto 30px;
+}
