add child routes.

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -49,7 +49,7 @@
                     </button>
                     &nbsp;&nbsp;&nbsp;
                     <button
-                      routerLink="/seller-update-product/{{ product.id }}"
+                      routerLink="seller-update-product/{{ product.id }}"
                       type="button"
                     >
                       {{ "Edit" | uppercase }}
