populated update product form.

--- a/src/app/seller-update-product/seller-update-product.component.html
+++ b/src/app/seller-update-product/seller-update-product.component.html
@@ -12,6 +12,9 @@
     </div>
 
     <!-- /----::SELLER-ACCOUNT-FORM::----/ -->
+    <div *ngIf="loader" class="loader">
+      <p>Loading...</p>
+    </div>
     <div class="seller-account-form">
       <div class="seller-account-form-child">
         <ng-container>
