--- a/src/app/seller-update-product/seller-update-product.component.scss
+++ b/src/app/seller-update-product/seller-update-product.component.scss
@@ -4,3 +4,8 @@
 .seller-account-form {
   border: 1px solid $color-red-crimson;
 }
+
+.loader {
+  text-align: center;
+  color: $color-red-crimson;
+}
