product update with api.

--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -59,6 +59,8 @@ table td:nth-child(6) {
 
 table td:last-child {
   padding: 0px !important;
+  max-width: 200px;
+  min-width: 200px;
 }
 
 table td:last-child div {
