add home page header design.

--- a/src/theme/variable.scss
+++ b/src/theme/variable.scss
@@ -28,7 +28,7 @@ $max-tablet-width: 899px;
 
 // COLOR
 $searchBorderColor: #dedede;
-$searchInputBg: #f8f8f8;
+$color-white: #f8f8f8;
 $color-primary: #ef3688;
 $color-secondary: #ffd200;
 $icon-default-color: #ffffff;
@@ -42,6 +42,7 @@ $color-light-gray-2: #a1a1a1;
 $color-light-gray-3: #a1a1a14d;
 $color-light-2: #eeee;
 $color-black: #000000;
+$color-black-2: #333333;
 $color-smooth-black: #e4e4e4;
 $color-red-crimson: #fc404a;
 $color-crimson-opacity: #fc4049d8;
