add header section mobile responsive

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -300,8 +300,8 @@
                 </svg>
               </div>
               <div class="ser-appto-content">
-                <h4>24/7 Free Support</h4>
-                <p>Online Support 24/7</p>
+                <h4>Money Back Guarantee</h4>
+                <p>Money Back Guarantee</p>
               </div>
             </div>
           </div>
@@ -370,8 +370,8 @@
                 </svg>
               </div>
               <div class="ser-appto-content">
-                <h4>24/7 Free Support</h4>
-                <p>Online Support 24/7</p>
+                <h4>Free Worldwide Shipping</h4>
+                <p>On Order Over $99</p>
               </div>
             </div>
           </div>
