--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -7,6 +7,18 @@
   position: relative;
 }
 
+@media (max-width: 1200px) {
+  .header-main {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 742px) {
+  .header-main {
+    margin-top: 30px;
+  }
+}
+
 .categories,
 .slider-ser-appto,
 .slider-ser-appto .slider-main,
@@ -150,19 +162,19 @@
 }
 
 .slider-ser-appto .ser-appto {
-  min-height: 100px;
   margin-top: 30px;
 }
 
 /* /-----::SLIDER-SECTION::-----/ */
 .slider-items {
   width: 100%;
-  height: 100%;
+  height: 470px;
 }
 
 .slider-bg {
   width: 100%;
   height: 100%;
+  vertical-align: middle;
 }
 
 .slider-bg img {
@@ -196,6 +208,7 @@
   min-width: 700px;
   max-width: 700px;
   height: auto;
+  padding-right: 15px;
 }
 
 .slider-content-child-child h3 {
@@ -231,6 +244,134 @@
 
 .slider-content-child-child button:hover {
   background-color: $color-crimson-opacity;
+}
+
+@media (max-width: 1200px) {
+  .categories {
+    display: none;
+  }
+
+  .slider-ser-appto .slider-main {
+    min-height: 260px;
+    max-height: 370px;
+    border-radius: 4px;
+    overflow: hidden;
+  }
+
+  .slider-items {
+    width: 100%;
+    min-height: 370px;
+    max-height: 370px;
+  }
+
+  .slider-content a .slider-content-child .slider-content-child-child {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 5%;
+    min-width: 300px;
+    max-width: 700px;
+    height: auto;
+  }
+}
+
+@media (max-width: 812px) {
+  .slider-items {
+    width: 100%;
+    min-height: 300px;
+    max-height: 300px;
+  }
+
+  .slider-content-child-child h3 {
+    font-size: 14px;
+  }
+
+  .slider-content-child-child h2 {
+    font-size: 35px;
+  }
+
+  .slider-content-child-child p {
+    font-size: 12px;
+  }
+
+  .slider-content-child-child button {
+    margin-top: 28px;
+  }
+}
+
+@media (max-width: 686px) {
+  .slider-items {
+    min-height: 260px;
+    max-height: 260px;
+  }
+
+  .slider-content-child-child h3 {
+    font-size: 12px;
+  }
+
+  .slider-content-child-child h2 {
+    font-size: 28px;
+  }
+
+  .slider-content-child-child p {
+    font-size: 11px;
+  }
+
+  .slider-content-child-child button {
+    margin-top: 18px;
+    padding: 8px 18px 7px 18px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 556px) {
+  .slider-ser-appto .slider-main {
+    min-height: 220px;
+  }
+
+  .slider-items {
+    min-height: 220px;
+    max-height: 220px;
+  }
+
+  .slider-content-child-child p {
+    display: none;
+  }
+}
+
+@media (max-width: 494px) {
+  .slider-ser-appto .slider-main {
+    min-height: 180px;
+  }
+
+  .slider-items {
+    min-height: 180px;
+    max-height: 180px;
+  }
+
+  .slider-content-child-child button {
+    margin-top: 8px;
+    padding: 6px 12px 4px 12px;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 360px) {
+  .slider-ser-appto .slider-main {
+    min-height: 160px;
+  }
+
+  .slider-items {
+    min-height: 160px;
+    max-height: 160px;
+  }
+
+  .slider-content-child-child h3 {
+    font-size: 16px;
+  }
+  .slider-content-child-child h2 {
+    font-size: 22px;
+  }
 }
 
 /* /-----::SER-APPTO::-----/ */
@@ -300,4 +441,89 @@
   font-size: 12px;
   text-transform: capitalize;
   margin-bottom: 0;
+}
+
+@media (max-width: 1000px) {
+  .ser-appto-child .ser-appto-item .ser-appto-icon {
+    min-width: 60px;
+    min-height: 60px;
+    max-width: 60px;
+    max-height: 60px;
+  }
+
+  .ser-appto-child .ser-appto-item .ser-appto-icon svg {
+    width: 30px;
+    height: 30px;
+  }
+
+  .ser-appto-child .ser-appto-item .ser-appto-content h4 {
+    font-size: 14px;
+  }
+
+  .ser-appto-child .ser-appto-item .ser-appto-content p {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 946px) {
+  .ser-appto-child .ser-appto-item {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .ser-appto-child .ser-appto-item .ser-appto-icon {
+    margin-bottom: 8px;
+  }
+}
+
+@media (max-width: 726px) {
+  .ser-appto .ser-appto-child {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .ser-appto .ser-appto-item-main {
+    margin-bottom: 12px;
+  }
+
+  .ser-appto .ser-appto-item-main:last-child {
+    margin-bottom: 0px;
+  }
+
+  .ser-appto .ser-appto-item-main:nth-child(2) {
+    border-left: 0px;
+    border-right: 0px;
+  }
+
+  .ser-appto-child .ser-appto-item {
+    flex-direction: row;
+    text-align: left;
+    justify-content: flex-start;
+  }
+
+  .ser-appto-child .ser-appto-item .ser-appto-icon {
+    margin-bottom: 0px;
+  }
+}
+
+@media (max-width: 346px) {
+  .ser-appto-child .ser-appto-item .ser-appto-icon {
+    min-width: 55px;
+    min-height: 55px;
+    max-width: 55px;
+    max-height: 55px;
+  }
+
+  .ser-appto-child .ser-appto-item .ser-appto-icon svg {
+    width: 25px;
+    height: 25px;
+  }
+
+  .ser-appto-child .ser-appto-item .ser-appto-content h4 {
+    font-size: 13px;
+  }
+
+  .ser-appto-child .ser-appto-item .ser-appto-content p {
+    font-size: 11px;
+  }
 }
