add product adverisement section design and responsive successfully.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -380,6 +380,64 @@
     </div>
   </div>
 
+  <div class="product-banners">
+    <div class="product-start">
+      <!-- one -->
+      <div class="product-banner">
+        <a href="#">
+          <div class="product-banner-item">
+            <div class="product-banner-bg">
+              <img
+                src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/490x600.jpg?v=1614293348"
+                alt="product-banner"
+              />
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="product-left">
+      <div class="product-left-top">
+        <!-- two -->
+        <div class="product-banner">
+          <a href="#">
+            <div class="product-banner-item">
+              <div class="product-banner-bg">
+                <img
+                  src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/1010x285.jpg?v=1614293348"
+                  alt="product-banner"
+                />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="product-left-bottom">
+        <!-- three -->
+        <div class="product-banner">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/490x285-1.jpg?v=1614293348"
+              alt="product-banner"
+            />
+          </a>
+        </div>
+
+        <!-- four -->
+        <div class="product-banner">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/490x285-2.jpg?v=1614293348"
+              alt="product-banner"
+            />
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <br />
   <br />
   <br />
